kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-management-api
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  namespace: onecloud-dev
spec:
  type: LoadBalancer
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    component: access-management-api
